--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# MyBatis 설정
+mybatis.mapper-locations=classpath:mapper/*_SQL.xml
+mybatis.type-aliases-package=com.forten.vo
+mybatis.configuration.map-underscore-to-camel-case=true
