데이터베이스 사용자 이름과 비밀번호를 forten_user 및 forten1234로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/forten
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=forten_user
+spring.datasource.password=forten1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # MyBatis 설정
