--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.0.14",
     "@tailwindcss/vite": "^4.0.14",
     "date-fns": "^4.1.0",
@@ -17,8 +18,10 @@
     "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.14"
