application.properties에 이미지 저장 경로 추가 및 PerformanceTest_SQL.xml에서 SQL 쿼리 대소문자 통일, index.html의 스크립트 및 스타일 시트 경로 업데이트, 사용하지 않는 CSS 파일 삭제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 mybatis.mapper-locations=classpath:mapper/*_SQL.xml
 mybatis.type-aliases-package=com.forten.vo
 mybatis.configuration.map-underscore-to-camel-case=true
+
+# 이미지 저장 경로
+spring.web.resources.static-locations=file:/home/ubuntu/images/
