Header.jsx에서 로고 경로를 환경 변수로 변경하고, application.properties에서 이미지 저장 경로를 수정했습니다. PerformanceTest_SQL.xml에서 성별 조건을 대문자로 통일하였으며, index.html의 스크립트 및 스타일 시트 경로를 업데이트하고 사용하지 않는 CSS 파일을 삭제했습니다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ mybatis.type-aliases-package=com.forten.vo
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # 이미지 저장 경로
-spring.web.resources.static-locations=file:/home/ubuntu/images/
+spring.web.resources.static-locations=classpath:/static/,file:/home/ubuntu/app/images/
+
